Replace some @Data with @Getters and @Setters, add builder